--- a/startCode/public/styles/styles.css
+++ b/startCode/public/styles/styles.css
@@ -1,3 +1,116 @@
+* {
+  /* background-color: #111111;   */
+  font: #cfc2c2;
+}
+
+.row {
+  border: #818181 10px;
+}
+
 .list-group-item {
   line-height: 2.5;
+}
+
+.container {
+  transition: margin-left .5s;
+  padding: 20px;
+
+}
+
+.dSideBar {
+  height: 100%;
+  width : 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left:0;
+  background-color: #111111;
+  overflow-x: hidden;
+  padding-top: 60px;
+  transition: 0.5s;
+}
+
+.dSideBar a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.dSideBar a:hover {
+  color: #f1f1f1;
+}
+
+.dSideBar .closeBar {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size:36px;
+  margin-left:50px;
+}
+
+@media screen and (max-height: 450px) {
+  .dSideBar {padding-top: 15px;}
+  .dSideBar a {font-size: 18px;}
+}
+
+.sideButtonD{
+  background-color: aqua;
+  border: 0px;
+  padding: 10px
+}
+
+.playerDataD{
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+
+.playerDataD button {
+  background-color: inherit;
+  float: left;
+  border: none;
+outline: none;
+cursor: pointer;
+padding: 14px 16px;
+transition: 0.3s;
+}
+
+.playerDataD button:hover{
+  background-color: #dddddd
+}
+
+.playerDataD button.active{
+  background-color: #ccc;
+}
+
+.dataPageContent {
+  display: none;
+  padding:6px 12px;
+  border: 1px solid #ccc;
+  border-top:none;
+}
+
+.playerCard {
+  position: relative;
+  width: 50%;
+  max-width: 300px;
+}
+
+/* .playerPic{
+  display: block;
+  width: 100%;
+  height:auto;
+} */
+
+.imageInfo {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  font-size: 20px;
+  padding:20px;
+  text-align: center;
 }
