--- a/startCode/views/index.handlebars
+++ b/startCode/views/index.handlebars
@@ -1,20 +1,269 @@
 <div id="home">
+
+  <div id='mySideBar' class='dSideBar'>
+    <a href='javascript:void(0)' class='closeBar' onclick="openBar()">&times;</a>
+    <a href="#">test1</a>
+    <a href="#">test2</a>
+    <a href="#">test3</a>
+    <a href="#">test4</a>
+  </div>
+
+  
   <div class="container">
+    
+      <button class='sideButtonD'>open</button>
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
-        <h2>This is our Home Page!</h2>
+        <h2>The GOAT</h2>
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
-            <label for="example-text">Example Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
+            <label for="example-text">Who's the Goat?</label>
+
+            {{!-- Search Bar --}}
+            <select class="form-control input-lg m-bot15">
+              <option>Find Player</option>
+            </select>
+            {{!-- Search Bar --}}
           </div>
-          <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
-          </div>
+
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
+
+{{!-- What goes inside the table --}}
+        <div class='playerDataD'>
+          <button class='dataPage' onclick="openPage (event, 'data')">Player</button>
+          <button class='dataPage' onclick="openPage (event, 'graph')">Graph</button>
+          <button class='dataPage' onclick="openPage (event, 'news')">News</button>
+          <button class='dataPage' onclick="openPage (event, 'rank')">Rank</button>
+          <button class='dataPage' onclick="openPage (event, 'team')">Team</button>
+        </div>
+
+{{!-- playerCard example --}}
+        <div class="playerCard">
+          <img src="./sampleImages/lebron_james_nba_171122_cle-vs-bkn-05.jpg" alt="Avatar" class="playerPic">
+          <div class="imageInfo">My Name is John</div>
+        </div>
+{{!-- playerCard end --}}
+
+        <div class="col-md-3">
+
+          <div class="social-box twitter">
+
+            <i class="fa fa-twitter" id='playerCard'></i>
+            <ul>
+              <li>
+                <strong id="salary">$0</strong>
+                <span>salary</span>
+              </li>
+              <li>
+                <strong id='position'>C</strong>
+                <span>Position</span>
+              </li>
+              <li>
+                <strong id='team'>Pacers</strong>
+                <span>Team</span>
+              </li>
+
+            </ul>
+          </div>
+        </div>
+
+
+{{!-- Start Table --}}
+ <div class="col-sm-12 col-lg-12 col-md-12">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h2><i class="fa fa-flag-o red"></i><strong>Registered Users</strong></h2>
+                <div class="panel-actions">
+                  <a href="index.html#" class="btn-setting"><i class="fa fa-rotate-right"></i></a>
+                  <a href="index.html#" class="btn-minimize"><i class="fa fa-chevron-up"></i></a>
+                  <a href="index.html#" class="btn-close"><i class="fa fa-times"></i></a>
+                </div>
+              </div>
+              <div class="panel-body table-responsive">
+                <table class="table countries">
+                  <thead>
+                    <tr>
+                      <th></th>
+                      <th>Player</th>
+                      <th>Year</th>
+                      <th>Season</th>
+                      <th>Team</th>
+                      <th>GP</th>
+                      <th>Min</th>
+                      <th>PPG</th>
+                      <th>Oreb</th>
+                      <th>Dreb</th>
+                      <th>Reb</th>
+                      <th>Ast</th>
+                      <th>Stl</th>
+                      <th>Blk</th>
+                      <th>TO</th>
+                      <th>PF</th>
+                      <th>FGM</th>
+                      <th>FGA</th>
+                      <th>FG%</th>
+                      <th>3PTM</th>
+                      <th>3PTA</th>
+                      <th>3PT%</th>
+                      <th>FTM</th>
+                      <th>FTA</th>
+                      <th>FT%</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><img src="img/Germany.png" style="height:18px; margin-top:-2px;"></td>
+                      <td>Germany</td>
+                      <td>2563</td>
+                      <td>1025</td>
+                      <td>
+                        <div class="progress thin">
+                          <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="73" aria-valuemin="0" aria-valuemax="100" style="width: 73%">
+                          </div>
+                          <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="27" aria-valuemin="0" aria-valuemax="100" style="width: 27%">
+                          </div>
+                        </div>
+                        <span class="sr-only">73%</span>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><img src="img/India.png" style="height:18px; margin-top:-2px;"></td>
+                      <td>India</td>
+                      <td>3652</td>
+                      <td>2563</td>
+                      <td>
+                        <div class="progress thin">
+                          <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="57" aria-valuemin="0" aria-valuemax="100" style="width: 57%">
+                          </div>
+                          <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="43" aria-valuemin="0" aria-valuemax="100" style="width: 43%">
+                          </div>
+                        </div>
+                        <span class="sr-only">57%</span>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><img src="img/Spain.png" style="height:18px; margin-top:-2px;"></td>
+                      <td>Spain</td>
+                      <td>562</td>
+                      <td>452</td>
+                      <td>
+                        <div class="progress thin">
+                          <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="93" aria-valuemin="0" aria-valuemax="100" style="width: 93%">
+                          </div>
+                          <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="7" aria-valuemin="0" aria-valuemax="100" style="width: 7%">
+                          </div>
+                        </div>
+                        <span class="sr-only">93%</span>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><img src="img/India.png" style="height:18px; margin-top:-2px;"></td>
+                      <td>Russia</td>
+                      <td>1258</td>
+                      <td>958</td>
+                      <td>
+                        <div class="progress thin">
+                          <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+                          </div>
+                          <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                          </div>
+                        </div>
+                        <span class="sr-only">20%</span>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><img src="img/Spain.png" style="height:18px; margin-top:-2px;"></td>
+                      <td>USA</td>
+                      <td>4856</td>
+                      <td>3621</td>
+                      <td>
+                        <div class="progress thin">
+                          <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+                          </div>
+                          <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                          </div>
+                        </div>
+                        <span class="sr-only">20%</span>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><img src="img/Germany.png" style="height:18px; margin-top:-2px;"></td>
+                      <td>Brazil</td>
+                      <td>265</td>
+                      <td>102</td>
+                      <td>
+                        <div class="progress thin">
+                          <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+                          </div>
+                          <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                          </div>
+                        </div>
+                        <span class="sr-only">20%</span>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><img src="img/Germany.png" style="height:18px; margin-top:-2px;"></td>
+                      <td>Coloumbia</td>
+                      <td>265</td>
+                      <td>102</td>
+                      <td>
+                        <div class="progress thin">
+                          <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+                          </div>
+                          <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                          </div>
+                        </div>
+                        <span class="sr-only">20%</span>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><img src="img/Germany.png" style="height:18px; margin-top:-2px;"></td>
+                      <td>France</td>
+                      <td>265</td>
+                      <td>102</td>
+                      <td>
+                        <div class="progress thin">
+                          <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+                          </div>
+                          <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                          </div>
+                        </div>
+                        <span class="sr-only">20%</span>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+      {{!-- end table --}}
+
+
+
+
+        <div id='data' class='dataPageContent'>
+          <h3>PLayer</h3>
+          <p>Here we put data</p>
+        </div>
+        <div id='graph' class='dataPageContent'>
+          <h3>Graph</h3>
+          <p>Take a wild guess</p>
+        </div>
+        <div id='news' class='dataPageContent'>
+          <h3>News</h3>
+          <p>Here we put data</p>
+        </div>
+        <div id='rank' class='dataPageContent'>
+          <h3>Rank</h3>
+          <p>Here we put data</p>
+        </div>
+        <div id='team' class='dataPageContent'>
+          <h3>Team</h3>
+          <p>Here we put data</p>
+        </div>
+
         <h3>Examples:</h3>
         <ul id="example-list" class="list-group">
           {{#each examples}}
@@ -26,8 +275,47 @@
         </ul>
       </div>
     </div>
+
+
   </div>
 </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
+<script>function openBar() {
+    $(".dSideBar").width('250px');
+    $(".container").css({ 'margin-left': '250px' });
+    console.log('open nav')
+  }
+
+  function closeBar() {
+    $(".dSideBar").width("0px");
+    $(".container").css({ 'margin-left': '0px' });
+  }
+
+  $('.sideButtonD').on('click', function () {
+    openBar();
+  })
+
+  $('.closeBar').on('click', function () {
+    closeBar();
+  })
+
+  function changeTab(event, contentD) {
+    var i, dataPageContent, dataPage;
+
+    dataPageContent = $('.dataPageContent');
+
+    for (var i = 0; i < dataPageContent.length; i++) {
+      dataPageContent[i].hide();
+    };
+
+    dataPage = $('.dataPage');
+    for (var i = 0; i < dataPage.length; i++) {
+      dataPage[i].toggleClass(' active', '')
+    }
+
+    $('contentD').show("block");
+    evt.currentTarget.className += " active";
+  }
+</script>
