Changes to file structure and name specificlly public>js>index.js i now js>indexPublic.js

--- a/startCode/public/styles/styles.css
+++ b/startCode/public/styles/styles.css
@@ -17,6 +17,14 @@
 
 }
 
+.header1 {
+  background-color: #818181;
+}
+
+.headerRow{
+  background-clip: #818181;
+}
+
 .dSideBar {
   height: 100%;
   width : 0;
