--- a/startCode/views/layouts/main.handlebars
+++ b/startCode/views/layouts/main.handlebars
@@ -3,16 +3,20 @@
 
 <head>
   <meta charset="utf-8">
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-  <link rel="stylesheet" href='/startCode/public/styles/styles.css'>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
+  
 
   <title>Home Page</title>
 </head>
 
 <body>
   {{{body}}}
-</body>
+  
 
+ 
+</body>
 </html>
