--- a/startCode/views/index.handlebars
+++ b/startCode/views/index.handlebars
@@ -86,28 +86,28 @@
                 <thead>
                   <tr>
                     <th></th>
-                    <th id='name'>Player</th>
-                    <th id = 'team'>Team</th>
-                    <th id = 'gp'>GP</th>
-                    <th id = 'min'>Min</th>
-                    <th id = 'ppg'>PPG</th>
-                    <th id = 'oreb'>Oreb</th>
-                    <th id = 'dreb'>Dreb</th>
-                    <th id = 'reb'>Reb</th>
-                    <th id = 'ast'>Ast</th>
-                    <th id = 'stl'>Stl</th>
-                    <th id = 'blk'>Blk</th>
-                    <th id = 'to'>TO</th>
-                    <th id = 'pf'>PF</th>
-                    <th id = 'fgm'>FGM</th>
-                    <th id = 'fga'>FGA</th>
-                    <th id = 'fgp'>FG%</th>
-                    <th id = '3ptm'>3PTM</th>
-                    <th id = '3pta'>3PTA</th>
-                    <th id = '3ptp'>3PT%</th>
-                    <th id = 'ftm'>FTM</th>
-                    <th id = 'fta'>FTA</th>
-                    <th id = 'ftp'>FT%</th>
+                    <th>Player</th>
+                    <th>Team</th>
+                    <th>GP</th>
+                    <th>Min</th>
+                    <th>PPG</th>
+                    <th>Oreb</th>
+                    <th>Dreb</th>
+                    <th>Reb</th>
+                    <th>Ast</th>
+                    <th>Stl</th>
+                    <th>Blk</th>
+                    <th>TO</th>
+                    <th>PF</th>
+                    <th>FGM</th>
+                    <th>FGA</th>
+                    <th>FG%</th>
+                    <th>3PTM</th>
+                    <th>3PTA</th>
+                    <th>3PT%</th>
+                    <th>FTM</th>
+                    <th>FTA</th>
+                    <th>FT%</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -116,17 +116,7 @@
                     <td>Germany</td>
                     <td>2563</td>
                     <td>1025</td>
-                    <td>
-                      <div class="progress thin">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="73"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 73%">
-                        </div>
-                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="27"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 27%">
-                        </div>
-                      </div>
-                      <span class="sr-only">73%</span>
-                    </td>
+                    <td></td>
                   </tr>
                 </tbody>
               </table>
@@ -183,8 +173,6 @@
                 <thead>
                   <tr>
                     <th>Player</th>
-                    <th>Year</th>
-                    <th>Season</th>
                     <th>Team</th>
                     <th>GP</th>
                     <th>Min</th>
@@ -217,10 +205,28 @@
                     <td></td>
                   </tr>
                   <tr>
-                    <td><img src="img/India.png" style="height:18px; margin-top:-2px;"></td>
-                    <td>India</td>
-                    <td>3652</td>
-                    <td>2563</td>
+                    <td id='name'></th>
+                    <td id = 'team'></th>
+                    <td id = 'gp'></th>
+                    <td id = 'min'></th>
+                    <td id = 'ppg'></th>
+                    <td id = 'oreb'>Oreb</th>
+                    <td id = 'dreb'>Dreb</th>
+                    <td id = 'reb'>Reb</th>
+                    <td id = 'ast'>Ast</th>
+                    <td id = 'stl'>Stl</th>
+                    <td id = 'blk'>Blk</th>
+                    <td id = 'to'>TO</th>
+                    <td id = 'pf'>PF</th>
+                    <td id = 'fgm'>FGM</th>
+                    <td id = 'fga'>FGA</th>
+                    <td id = 'fgp'>FG%</th>
+                    <td id = '3ptm'>3PTM</th>
+                    <td id = '3pta'>3PTA</th>
+                    <td id = '3ptp'>3PT%</th>
+                    <td id = 'ftm'>FTM</th>
+                    <td id = 'fta'>FTA</th>
+                    <td id = 'ftp'>FT%</th>
                     <td>
                       <div class="progress thin">
                         <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="57"
@@ -233,108 +239,7 @@
                       <span class="sr-only">57%</span>
                     </td>
                   </tr>
-                  <tr>
-                    <td><img src="img/Spain.png" style="height:18px; margin-top:-2px;"></td>
-                    <td>Spain</td>
-                    <td>562</td>
-                    <td>452</td>
-                    <td>
-                      <div class="progress thin">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="93"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 93%">
-                        </div>
-                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="7"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 7%">
-                        </div>
-                      </div>
-                      <span class="sr-only">93%</span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td><img src="img/India.png" style="height:18px; margin-top:-2px;"></td>
-                    <td>Russia</td>
-                    <td>1258</td>
-                    <td>958</td>
-                    <td>
-                      <div class="progress thin">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                        </div>
-                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="80"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                        </div>
-                      </div>
-                      <span class="sr-only">20%</span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td><img src="img/Spain.png" style="height:18px; margin-top:-2px;"></td>
-                    <td>USA</td>
-                    <td>4856</td>
-                    <td>3621</td>
-                    <td>
-                      <div class="progress thin">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                        </div>
-                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="80"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                        </div>
-                      </div>
-                      <span class="sr-only">20%</span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td><img src="img/Germany.png" style="height:18px; margin-top:-2px;"></td>
-                    <td>Brazil</td>
-                    <td>265</td>
-                    <td>102</td>
-                    <td>
-                      <div class="progress thin">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                        </div>
-                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="80"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                        </div>
-                      </div>
-                      <span class="sr-only">20%</span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td><img src="img/Germany.png" style="height:18px; margin-top:-2px;"></td>
-                    <td>Coloumbia</td>
-                    <td>265</td>
-                    <td>102</td>
-                    <td>
-                      <div class="progress thin">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                        </div>
-                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="80"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                        </div>
-                      </div>
-                      <span class="sr-only">20%</span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td><img src="img/Germany.png" style="height:18px; margin-top:-2px;"></td>
-                    <td>France</td>
-                    <td>265</td>
-                    <td>102</td>
-                    <td>
-                      <div class="progress thin">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                        </div>
-                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="80"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                        </div>
-                      </div>
-                      <span class="sr-only">20%</span>
-                    </td>
-                  </tr>
+                  
                 </tbody>
               </table>
             </div>
