player info can now be added into their respected team databases

--- a/startCode/views/index.handlebars
+++ b/startCode/views/index.handlebars
@@ -85,27 +85,29 @@
               <table class="table countries">
                 <thead>
                   <tr>
+                    <button id='addPlayerA'>Team A</button>
+                    <button id='addPlayerB'>Team B</button>
                     <th></th>
                     <th>Player</th>
                     <th>Team</th>
-                    <th>GP</th>
-                    <th>Min</th>
-                    <th>PPG</th>
-                    <th>Oreb</th>
-                    <th>Dreb</th>
-                    <th>Reb</th>
-                    <th>Ast</th>
-                    <th>Stl</th>
-                    <th>Blk</th>
-                    <th>TO</th>
-                    <th>PF</th>
-                    <th>FGM</th>
-                    <th>FGA</th>
-                    <th>FG%</th>
-                    <th>3PTM</th>
-                    <th>3PTA</th>
-                    <th>3PT%</th>
-                    <th>FTM</th>
+                    <th >GP</th>
+                    <th >Min</th>
+                    <th >PPG</th>
+                    <th >Oreb</th>
+                    <th >Dreb</th>
+                    <th >Reb</th>
+                    <th >Ast</th>
+                    <th >Stl</th>
+                    <th >Blk</th>
+                    <th >TO</th>
+                    <th >PF</th>
+                    <th >FGM</th>
+                    <th >FGA</th>
+                    <th >FG%</th>
+                    <th >3PTM</th>
+                    <th >3PTA</th>
+                    <th >3PT%</th>
+                    <th >FTM</th>
                     <th>FTA</th>
                     <th>FT%</th>
                   </tr>
@@ -113,10 +115,26 @@
                 <tbody>
                   <tr>
                     <td><img src="img/Germany.png" style="height:18px; margin-top:-2px;"></td>
-                    <td>Germany</td>
-                    <td>2563</td>
-                    <td>1025</td>
-                    <td></td>
+                    <td id = 'players'></td>
+                    <td id = 'team'></td>
+                    <td id = 'gp'></td>
+                    <td id = 'min'></td>
+                    <td id = 'ppg'></td>
+                    <td id = 'oreb'></td>
+                    <td id = 'dreb'></td>
+                    <td id = 'reb'></td>
+                    <td id = 'ast'></td>
+                    <td id = 'stl'></td>
+                    <td id = 'blk'></td>
+                    <td id = 'to'></td>
+                    <td id = 'pf'></td>
+                    <td id = 'fgm'></td>
+                    <td id = 'fga'></td>
+                    <td id = 'fgp'></td>
+                    <td id = 'ptm'></td>
+                    <td id = 'pta'></td>
+                    <td id = 'ptp'></td>
+                    <td id = 'ftm'></td>
                   </tr>
                 </tbody>
               </table>
