--- a/startCode/public/styles/styles.css
+++ b/startCode/public/styles/styles.css
@@ -18,7 +18,11 @@
 }
 
 .header1 {
-  background-color: #818181;
+  margin: auto;
+}
+
+#headerText {
+  font-family: 'Saira Stencil One', cursive;
 }
 
 .headerRow{
@@ -36,6 +40,7 @@
   overflow-x: hidden;
   padding-top: 60px;
   transition: 0.5s;
+  font-family: 'Karla', sans-serif;
 }
 
 .dSideBar a {
@@ -64,6 +69,8 @@
   .dSideBar a {font-size: 18px;}
 }
 
+
+
 .sideButtonD{
   background-color: aqua;
   border: 0px;
@@ -84,6 +91,8 @@ outline: none;
 cursor: pointer;
 padding: 14px 16px;
 transition: 0.3s;
+margin-left: auto;
+margin-right: auto;
 }
 
 .playerDataD button:hover{
@@ -99,6 +108,8 @@ transition: 0.3s;
   padding:6px 12px;
   border: 1px solid #ccc;
   border-top:none;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .playerCard {
