player cards added/look like trash

--- a/startCode/views/index.handlebars
+++ b/startCode/views/index.handlebars
@@ -259,7 +259,11 @@
       {{!-- End what goes inside the table --}}
       <div class='teamASide'>
         Team A
-        <div class='playerInfo'></div>
+        <div class='playerInfoA'></div>
+      </div>
+      <div class='teamBSide'>
+        Team B
+        <div class='playerInfoB'></div>
       </div>
 
     </div>
