Buttons added with appropriate calls

--- a/startCode/views/index.handlebars
+++ b/startCode/views/index.handlebars
@@ -29,7 +29,7 @@
           </form>
           {{!-- Search Bar --}}
         </div>
-        </form>
+
 
       </div>
     </div>
@@ -39,7 +39,7 @@
 
 
     <div class="row" id='afterSearch'>
-      
+
       <div class="col-8 offset-2">
         {{!-- <h1>{{msg}}</h1> --}}
         <h2 id='headerText'>The GOAT</h2>
@@ -57,7 +57,6 @@
         <button class='sideButtonD'>open</button>
       </div>
 
-      {{!-- </form> --}}
 
       {{!-- tab section to help players make informed descisions --}}
       <div class='playerDataD'>
@@ -190,6 +189,7 @@
                 <a href="index.html#" class="btn-close"><i class="fa fa-times"></i></a>
               </div>
             </div>
+
             <div class="panel-body table-responsive">
               <table class="table countries">
                 <thead>
@@ -253,11 +253,14 @@
                 </tbody>
               </table>
             </div>
+
           </div>
         </div>
         {{!-- end the table for the entire teams data --}}
       </div>
       {{!-- End what goes inside the table --}}
+      <br>
+      <hr>
       <div class='teamASide'>
         Team A
         <div class='playerInfoA'></div>
@@ -269,6 +272,9 @@
 
     </div>
   </div>
+
+  <button id='ballDontLie'>Ball Don't Lie</button>
+  <button id='runItBack'>Run It Back</button>
 
 
 
