--- a/startCode/views/index.handlebars
+++ b/startCode/views/index.handlebars
@@ -58,246 +58,231 @@
       </div>
     </div>
 
-      {{!-- tab section to help players make informed descisions --}}
-      <div class='playerDataD'>
-        <button class='dataPage'>Player</button>
-        <button class='dataPage'>Graph</button>
-        <button class='dataPage'>News</button>
-        <button class='dataPage'>Rank</button>
-        <button class='dataPage'>Team</button>
-      </div>
-      {{!-- end tab table to help players make informed descisions --}}
+    {{!-- tab section to help players make informed descisions --}}
+    <div class='playerDataD'>
+      <div class='dataPage' id='currentPlayer'></div>
+      <button class='dataPage' id='table'>Player</button>
+      <button class='dataPage' id='graphButton'>Graph</button>
+      <button class='dataPage' id='newsButton'>News</button>
+      <button class='dataPage'>Rank</button>
+      <button class='dataPage'>Team</button>
+    </div>
+    {{!-- end tab table to help players make informed descisions --}}
 
 
-      {{!-- What goes inside tab/info portion --}}
+    {{!-- What goes inside tab/info portion --}}
 
     {{!-- player tab starts here --}}
 
-      <div id='Player' class='dataPageContent'>
+    <div id='Player' class='dataPageContent'>
 
-        {{!-- Start Player Data Table in tab Player --}}
-        <div class="col-sm-12 col-lg-12 col-md-12">
-          <div class="panel panel-default">
-            <div class="panel-heading">
+      {{!-- Start Player Data Table in tab Player --}}
+      <div class="col-sm-12 col-lg-12 col-md-12">
+        <div class="panel panel-default">
+          <div class="panel-heading">
 
-              <div class="panel-actions">
-                <a href="index.html#" class="btn-setting"><i class="fa fa-rotate-right"></i></a>
-                <a href="index.html#" class="btn-minimize"><i class="fa fa-chevron-up"></i></a>
-                <a href="index.html#" class="btn-close"><i class="fa fa-times"></i></a>
-              </div>
-            </div>
-
-            <div class="panel-body table-responsive">
-              <table class="tablecountries">
-                <thead>
-                  <tr>
-                    <button id='addPlayerA'>Team A</button>
-                    <button id='addPlayerB'>Team B</button>
-                    <th>Player</th>
-                    <th>Team</th>
-                    <th>GP</th>
-                    <th>Min</th>
-                    <th>PPG</th>
-                    <th>Oreb</th>
-                    <th>Dreb</th>
-                    <th>Reb</th>
-                    <th>Ast</th>
-                    <th>Stl</th>
-                    <th>Blk</th>
-                    <th>TO</th>
-                    <th>PF</th>
-                    <th>FGM</th>
-                    <th>FGA</th>
-                    <th>FG%</th>
-                    <th>3PTM</th>
-                    <th>3PTA</th>
-                    <th>3PT%</th>
-                    <th>FTM</th>
-                    <th>FTA</th>
-                    <th>FT%</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td id='players'></td>
-                    <td id='team'></td>
-                    <td id='gp'></td>
-                    <td id='min'></td>
-                    <td id='ppg'></td>
-                    <td id='oreb'></td>
-                    <td id='dreb'></td>
-                    <td id='reb'></td>
-                    <td id='ast'></td>
-                    <td id='stl'></td>
-                    <td id='blk'></td>
-                    <td id='to'></td>
-                    <td id='pf'></td>
-                    <td id='fgm'></td>
-                    <td id='fga'></td>
-                    <td id='fgp'></td>
-                    <td id='ptm'></td>
-                    <td id='pta'></td>
-                    <td id='ptp'></td>
-                    <td id='ftm'></td>
-                  </tr>
-                </tbody>
-              </table>
+            <div class="panel-actions">
+              <a href="index.html#" class="btn-setting"><i class="fa fa-rotate-right"></i></a>
+              <a href="index.html#" class="btn-minimize"><i class="fa fa-chevron-up"></i></a>
+              <a href="index.html#" class="btn-close"><i class="fa fa-times"></i></a>
             </div>
           </div>
-          {{!-- whats above? --}}
+
+          <div class="panel-body table-responsive">
+            <table class="tablecountries">
+              <thead>
+                <tr>
+                  <button id='addPlayerA'>Team A</button>
+                  <button id='addPlayerB'>Team B</button>
+                  <th>Player</th>
+                  <th>Team</th>
+                  <th>GP</th>
+                  <th>Min</th>
+                  <th>PPG</th>
+                  <th>Oreb</th>
+                  <th>Dreb</th>
+                  <th>Reb</th>
+                  <th>Ast</th>
+                  <th>Stl</th>
+                  <th>Blk</th>
+                  <th>TO</th>
+                  <th>PF</th>
+                  <th>FGM</th>
+                  <th>FGA</th>
+                  <th>FG%</th>
+                  <th>3PTM</th>
+                  <th>3PTA</th>
+                  <th>3PT%</th>
+                  <th>FTM</th>
+                  <th>FTA</th>
+                  <th>FT%</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td id='players'></td>
+                  <td id='team'></td>
+                  <td id='gp'></td>
+                  <td id='min'></td>
+                  <td id='ppg'></td>
+                  <td id='oreb'></td>
+                  <td id='dreb'></td>
+                  <td id='reb'></td>
+                  <td id='ast'></td>
+                  <td id='stl'></td>
+                  <td id='blk'></td>
+                  <td id='to'></td>
+                  <td id='pf'></td>
+                  <td id='fgm'></td>
+                  <td id='fga'></td>
+                  <td id='fgp'></td>
+                  <td id='ptm'></td>
+                  <td id='pta'></td>
+                  <td id='ptp'></td>
+                  <td id='ftm'></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
-        {{!-- end Player Data Table in tab Player --}}
+        {{!-- whats above? --}}
       </div>
+      {{!-- end Player Data Table in tab Player --}}
+    </div>
 
     {{!-- player tab ends here --}}
 
     {{!-- Player Graph starts here --}}
-    
-      <div id='Graph' class='dataPageContent'>
-        <div class="container">
-          <div class="row my-3">
-            <div class="col">
-              <h4>Bootstrap 4 Chart.js - Bar Chart</h4>
-            </div>
-          </div>
-          <div class="row my-2">
-            <div class="col-md-12">
-              <div class="card">
-                <div class="card-body">
-                  <canvas id="chBar" height="100"></canvas>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
 
-      {{!-- Player Graph ends here --}}
+    <div id='Graph' class='dataPageContent'>
+       <div id="chartContainer" style="height: 370px; width: 100%;"></div>
+    </div>
+
+    {{!-- Player Graph ends here --}}
 
     {{!-- news starts here --}}
-      {{!-- I need to connect the previous API set up to include news articles --}}
-      <div id='News' class='dataPageContent'>
-        <h3>News</h3>
-        <p>Here we put data</p>
-      </div>
+    {{!-- I need to connect the previous API set up to include news articles --}}
+    <div id='News' class='dataPageContent'>
+      <div id='news-section'></div>
+    </div>
 
     {{!-- news ends here --}}
 
 
-    
+
     {{!-- Rank Starts here --}}
 
-      <div id='Rank' class='dataPageContent'>
-        <h3>Rank</h3>
-        <p>Here we put data</p>
-      </div>
+    <div id='Rank' class='dataPageContent'>
+      <h3>Rank</h3>
+      <p>Here we put data</p>
+    </div>
 
     {{!-- Rank Ends Here --}}
 
     {{!-- Team Data Starts Here --}}
-      <div id='teamData' class='dataPageContent'>
-        {{!-- here is the table for the entire teams data --}}
-        <div class="col-sm-12 col-lg-12 col-md-12">
-          <div class="panel panel-default">
-            <div class="panel-heading">
+    <div id='teamData' class='dataPageContent'>
+      {{!-- here is the table for the entire teams data --}}
+      <div class="col-sm-12 col-lg-12 col-md-12">
+        <div class="panel panel-default">
+          <div class="panel-heading">
 
-              <div class="panel-actions">
-                <a href="index.html#" class="btn-setting"><i class="fa fa-rotate-right"></i></a>
-                <a href="index.html#" class="btn-minimize"><i class="fa fa-chevron-up"></i></a>
-                <a href="index.html#" class="btn-close"><i class="fa fa-times"></i></a>
-              </div>
+            <div class="panel-actions">
+              <a href="index.html#" class="btn-setting"><i class="fa fa-rotate-right"></i></a>
+              <a href="index.html#" class="btn-minimize"><i class="fa fa-chevron-up"></i></a>
+              <a href="index.html#" class="btn-close"><i class="fa fa-times"></i></a>
             </div>
-
-            <div class="panel-body table-responsive">
-              <table class="table countries">
-                <thead>
-                  <tr>
-                    <th>Player</th>
-                    <th>Team</th>
-                    <th>GP</th>
-                    <th>Min</th>
-                    <th>PPG</th>
-                    <th>Oreb</th>
-                    <th>Dreb</th>
-                    <th>Reb</th>
-                    <th>Ast</th>
-                    <th>Stl</th>
-                    <th>Blk</th>
-                    <th>TO</th>
-                    <th>PF</th>
-                    <th>FGM</th>
-                    <th>FGA</th>
-                    <th>FG%</th>
-                    <th>3PTM</th>
-                    <th>3PTA</th>
-                    <th>3PT%</th>
-                    <th>FTM</th>
-                    <th>FTA</th>
-                    <th>FT%</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td id='name'>
-                      </th>
-                    <td id='team'>
-                      </th>
-                    <td id='gp'>
-                      </th>
-                    <td id='min'>
-                      </th>
-                    <td id='ppg'>
-                      </th>
-                    <td id='oreb'>Oreb</th>
-                    <td id='dreb'>Dreb</th>
-                    <td id='reb'>Reb</th>
-                    <td id='ast'>Ast</th>
-                    <td id='stl'>Stl</th>
-                    <td id='blk'>Blk</th>
-                    <td id='to'>TO</th>
-                    <td id='pf'>PF</th>
-                    <td id='fgm'>FGM</th>
-                    <td id='fga'>FGA</th>
-                    <td id='fgp'>FG%</th>
-                    <td id='3ptm'>3PTM</th>
-                    <td id='3pta'>3PTA</th>
-                    <td id='3ptp'>3PT%</th>
-                    <td id='ftm'>FTM</th>
-                    <td id='fta'>FTA</th>
-                    <td id='ftp'>FT%</th>
-                    <td></td>
-                  </tr>
-
-                </tbody>
-              </table>
-            </div>
-
           </div>
+
+          <div class="panel-body table-responsive">
+            <table class="table countries">
+              <thead>
+                <tr>
+                  <th>Player</th>
+                  <th>Team</th>
+                  <th>GP</th>
+                  <th>Min</th>
+                  <th>PPG</th>
+                  <th>Oreb</th>
+                  <th>Dreb</th>
+                  <th>Reb</th>
+                  <th>Ast</th>
+                  <th>Stl</th>
+                  <th>Blk</th>
+                  <th>TO</th>
+                  <th>PF</th>
+                  <th>FGM</th>
+                  <th>FGA</th>
+                  <th>FG%</th>
+                  <th>3PTM</th>
+                  <th>3PTA</th>
+                  <th>3PT%</th>
+                  <th>FTM</th>
+                  <th>FTA</th>
+                  <th>FT%</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td id='name'>
+                    </th>
+                  <td id='team'>
+                    </th>
+                  <td id='gp'>
+                    </th>
+                  <td id='min'>
+                    </th>
+                  <td id='ppg'>
+                    </th>
+                  <td id='oreb'>Oreb</th>
+                  <td id='dreb'>Dreb</th>
+                  <td id='reb'>Reb</th>
+                  <td id='ast'>Ast</th>
+                  <td id='stl'>Stl</th>
+                  <td id='blk'>Blk</th>
+                  <td id='to'>TO</th>
+                  <td id='pf'>PF</th>
+                  <td id='fgm'>FGM</th>
+                  <td id='fga'>FGA</th>
+                  <td id='fgp'>FG%</th>
+                  <td id='3ptm'>3PTM</th>
+                  <td id='3pta'>3PTA</th>
+                  <td id='3ptp'>3PT%</th>
+                  <td id='ftm'>FTM</th>
+                  <td id='fta'>FTA</th>
+                  <td id='ftp'>FT%</th>
+                  <td></td>
+                </tr>
+
+              </tbody>
+            </table>
+          </div>
+
         </div>
-        {{!-- end the table for the entire teams data --}}
       </div>
+      {{!-- end the table for the entire teams data --}}
+    </div>
 
     {{!-- Team Data Ends Here --}}
-      {{!-- End what goes inside the table --}}
-      <br>
-      <hr>
+    {{!-- End what goes inside the table --}}
+    <br>
+    <hr>
 
-      <div class='playerCardContainer'>
-        <div class='teamSide' id ='playerSideA'>
-          Team A
-          <div class='playerInfoA'></div>
-        </div>
-        <div class='teamSide' id = 'playerSideA'>
-          Team B
-          <div class='playerInfoB'></div>
-        </div>
+    <div class='playerCardContainer'>
+      <div class='teamSide' id='playerSideA'>
+        Team A
+        <div class='playerInfoA'></div>
       </div>
-
+      <div class='teamSide' id='playerSideA'>
+        Team B
+        <div class='playerInfoB'></div>
+      </div>
     </div>
-    <button id='ballDontLie'>Ball Don't Lie</button>
-    <button id='runItBack'>Run It Back</button>
 
   </div>
+  <button class='functionButton' id='ballDontLie'>Ball Don't Lie</button>
+  <button class='functionButton' id='runItBack'>Run It Back</button>
+
+</div>
 
 
 
@@ -309,3 +294,4 @@
 
 
 <script src="/js/indexPublic.js"></script>
+<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
