--- a/startCode/public/styles/styles.css
+++ b/startCode/public/styles/styles.css
@@ -16,10 +16,29 @@
   padding: 20px;
 
 }
+#addPlayerB {
+  float: right;
+  margin-left: 10px;
+  margin-right: 10px;
+}
 
+
+#addPlayerA {
+  float: right;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+#currentPlayer{
+  margin-left: auto;
+  margin-right:auto;
+}
 
 #headerText {
   font-family: 'Saira Stencil One', cursive;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 86px;
 }
 
 #headerTextAfterSearch {
@@ -122,7 +141,12 @@ margin-right: auto;
   max-width: 300px
 }
 
-.playerPic{
+.playerPicA{
+  display: block;
+  width: 100%;
+  height:auto;
+}
+.playerPicB{
   display: block;
   width: 100%;
   height:auto;
