--- a/startCode/views/layouts/main.handlebars
+++ b/startCode/views/layouts/main.handlebars
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
    
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  
+  <script src="https://kit.fontawesome.com/7db517c953.js" crossorigin="anonymous"></script> 
+ 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Karla|Saira+Stencil+One&display=swap" rel="stylesheet">
